Fixed: Remove spare space of scrollbar.
tower:https://tower.im/projects/6c45279d2fa140258583334a694ecd07/todos/628a397f6c4e47c0b19416e68ae25485/

--- a/resources/installer/css/part.css
+++ b/resources/installer/css/part.css
@@ -169,7 +169,7 @@
 
 .PartTableItems {
     width:700px;
-    height:280px;
+    height:302px;
     overflow-y:auto;
     overflow-x:hidden;
 }
